Updated z3 and cvc4 versions

--- a/wxs.config
+++ b/wxs.config
@@ -1,5 +1,5 @@
-z3Url=https://github.com/TorXakis/Dependencies/releases/download/z3-4.5.1.1f29cebd4df6-x64-win/z3-4.5.1.1f29cebd4df6-x64-win.zip
-cvc4Url=https://github.com/TorXakis/Dependencies/releases/download/cvc4-2017-06-13-win32-opt/cvc4-2017-06-13-win32-opt.exe
+z3Url=https://github.com/TorXakis/Dependencies/releases/download/z3-4.5.1/z3-4.5.1.059bad909ad4-x64-win_20170905.zip
+cvc4Url=https://github.com/TorXakis/Dependencies/releases/download/cvc4_1.5/cvc4-1.5-win32-opt.exe
 version=0.3.0
 torxakisFolder=v0.3.0\torxakis
 eclipseFolder=v0.3.0\SupportEclipse
