Improved script + new Wix version
We got
```
 1 Build started
 2 $buildVersion = $env:APPVEYOR_REPO_TAG_NAME.TrimStart("v")
 3 You cannot call a method on a null-valued expression.
 4 At line:1 char:1
 5 + $buildVersion = $env:APPVEYOR_REPO_TAG_NAME.TrimStart("v")
 6 + ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 7      + CategoryInfo          : InvalidOperation: (:) [], RuntimeException
 8      + FullyQualifiedErrorId : InvokeMethodOnNull
 9
10 Command executed with exception: You cannot call a method on a null-valued expression.
```
Solved by protecting it with `APPVEYOR_REPO_TAG`. (I don't know how to
test the script ;-(

Moved to newer version wix (see
https://github.com/TorXakis/SourceWindowsInstaller/issues/31)

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ version: b{build}
     # - /^hotfix.*$/
 
 init:
-- ps: $buildVersion = $env:APPVEYOR_REPO_TAG_NAME.TrimStart("v")
+- ps: $buildVersion = if ($env:APPVEYOR_REPO_TAG) { $env:APPVEYOR_REPO_TAG_NAME.TrimStart("v") } else {"UNDEFINED"}
 - ps: Update-AppveyorBuild -Version "${buildVersion}_${env:APPVEYOR_BUILD_NUMBER}"
 - ps: $STACK = "C:\SourceWindowsInstaller\.stack"
 - mkdir %LOCALAPPDATA%\Programs\stack
@@ -28,7 +28,7 @@ install:
     } else {
         Write-Host "stack.exe found.";
     }
-- choco install wixtoolset --version 3.10.3.300702
+- choco install wixtoolset --version 3.10.4.4718
 - refreshenv
 - ps: $env:Path += ";C:\Program Files\Git\mingw64\bin;${STACK};C:\Users\appveyor\AppData\Roaming\local\bin"
 
