end of experiment

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,8 +12,7 @@ version: b{build}
     # - /^hotfix.*$/
 
 init:
-- ps: $buildVersion = "0.7.0"
-#if ($env:APPVEYOR_REPO_TAG) { $env:APPVEYOR_REPO_TAG_NAME.TrimStart("v") } else {"UNDEFINED"}
+- ps: $buildVersion = $env:APPVEYOR_REPO_TAG_NAME.TrimStart("v")
 - ps: Update-AppveyorBuild -Version "${buildVersion}_${env:APPVEYOR_BUILD_NUMBER}"
 - ps: $STACK = "C:\SourceWindowsInstaller\.stack"
 - mkdir %LOCALAPPDATA%\Programs\stack
