--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -37,7 +37,7 @@ before_build:
 
 build_script:
 #- .\TxsCreateInstaller.bat %BUILD_VERSION% .\wxs.config
-- .\TxsCreateInstaller.bat "0.7.0" .\wxs.config
+- .\TxsCreateInstaller.bat 0.7.0 .\wxs.config
 # - ps: tree $env:APPVEYOR_REPO_TAG_NAME
 
 # after_build:
@@ -56,9 +56,9 @@ cache:
 - '%LOCALAPPDATA%\Programs\stack\x86_64-windows\ghc-integersimple-8.2.2'
 # in case the installation folder was not retrieved from cache
 - '%LOCALAPPDATA%\Programs\stack\x86_64-windows\ghc-integersimple-8.2.2.installed -> %LOCALAPPDATA%\Programs\stack\x86_64-windows\ghc-integersimple-8.2.2\bin\ghcii.sh'
-- '%LOCALAPPDATA%\Programs\stack\x86_64-windows\msys2-20150512'
+- '%LOCALAPPDATA%\Programs\stack\x86_64-windows\msys64'
 # in case the installation folder was not retrieved from cache
-- '%LOCALAPPDATA%\Programs\stack\x86_64-windows\msys2-20150512.installed -> %LOCALAPPDATA%\Programs\stack\x86_64-windows\msys2-20150512\autorebase.bat'
+- '%LOCALAPPDATA%\Programs\stack\x86_64-windows\msys64.installed -> %LOCALAPPDATA%\Programs\stack\x86_64-windows\msys64\autorebase.bat'
 # - packages -> **\packages.config  # preserve "packages" directory in the root of build folder but will reset it if packages.config is modified
 
 # test_script:
