--- a/wxs.config
+++ b/wxs.config
@@ -1,5 +1,5 @@
-z3Url=https://github.com/TorXakis/Dependencies/releases/download/z3-4.6.0/z3-4.6.0-x64-win.zip
-cvc4Url=https://github.com/TorXakis/Dependencies/releases/download/cvc4-20180306/cvc4-20180306-win32-opt.exe
+z3Url=https://github.com/TorXakis/Dependencies/releases/download/z3-4.7.1/z3-4.7.1-x64-win.zip
+cvc4Url=https://github.com/TorXakis/Dependencies/releases/download/cvc4_1.6/cvc4-1.6-win64-opt.exe
 eclipsePluginUrl=https://github.com/TorXakis/SupportEclipse/releases/download/v1.0/update-site.zip
 torxakisFolder=torxakis
 nppFolder=SupportNotepadPlusPlus
