--- a/wxs.config
+++ b/wxs.config
@@ -1,4 +1,4 @@
-z3Url=https://github.com/TorXakis/Dependencies/releases/download/z3-4.7.1/z3-4.7.1-x64-win.zip
+z3Url=https://github.com/TorXakis/Dependencies/releases/download/z3-4.8.4/z3-4.8.4.d6df51951f4c-x64-win.zip
 cvc4Url=https://github.com/TorXakis/Dependencies/releases/download/cvc4_1.6/cvc4-1.6-win64-opt.exe
 eclipsePluginUrl=https://github.com/TorXakis/SupportEclipse/releases/download/v1.0/update-site.zip
 torxakisFolder=torxakis
