--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -55,9 +55,9 @@ cache:
 - '%LOCALAPPDATA%\Programs\stack\x86_64-windows\ghc-integersimple-8.2.2'
 # in case the installation folder was not retrieved from cache
 - '%LOCALAPPDATA%\Programs\stack\x86_64-windows\ghc-integersimple-8.2.2.installed -> %LOCALAPPDATA%\Programs\stack\x86_64-windows\ghc-integersimple-8.2.2\bin\ghcii.sh'
-- '%LOCALAPPDATA%\Programs\stack\x86_64-windows\msys64'
+- '%LOCALAPPDATA%\Programs\stack\x86_64-windows\msys2-20180531'
 # in case the installation folder was not retrieved from cache
-- '%LOCALAPPDATA%\Programs\stack\x86_64-windows\msys64.installed -> %LOCALAPPDATA%\Programs\stack\x86_64-windows\msys64\autorebase.bat'
+- '%LOCALAPPDATA%\Programs\stack\x86_64-windows\msys2-20180531.installed -> %LOCALAPPDATA%\Programs\stack\x86_64-windows\msys2-20180531\autorebase.bat'
 # - packages -> **\packages.config  # preserve "packages" directory in the root of build folder but will reset it if packages.config is modified
 
 # test_script:
