--- a/wxs.config
+++ b/wxs.config
@@ -1,5 +1,5 @@
-z3Url=https://github.com/TorXakis/Dependencies/releases/download/z3-4.8.5-nightly/z3-4.8.5.b63a0e31d3e2-x64-win.zip
-cvc4Url=https://github.com/TorXakis/Dependencies/releases/download/cvc4_1.6/cvc4-1.6-win64-opt.exe
+z3Url=https://github.com/TorXakis/Dependencies/releases/download/z3-4.8.5/z3-4.8.5-x64-win.zip
+cvc4Url=https://github.com/TorXakis/Dependencies/releases/download/cvc4_1.7/cvc4-1.7-win64-opt.exe
 eclipsePluginUrl=https://github.com/TorXakis/SupportEclipse/releases/download/v1.0/update-site.zip
 torxakisFolder=torxakis
 nppFolder=SupportNotepadPlusPlus
